Resolve esn#2632 Update avatar and bubble for a better visibility

--- a/frontend/app/roles/admin-roles.less
+++ b/frontend/app/roles/admin-roles.less
@@ -59,9 +59,8 @@ admin-roles admin-roles-list {
         }
       }
 
-      esn-avatar img {
-        width: @searchAvatarSize;
-        border-radius: 3px;
+      img {
+        .avatar(@searchAvatarSize);
       }
     }
   }
